--- a/articles/81e5476156bc53.md
+++ b/articles/81e5476156bc53.md
@@ -2,7 +2,7 @@
 title: "paddingで余白を調整する"
 emoji: "👣"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["padding", "余白", "Flutter", "画面の余白",]
+topics: ["padding", "余白", "Flutter", "画面の余白", "初心者",]
 published: true
 ---
 paddingは余白を作ったり、余白の幅などを調整する場合に用いるwidgetです。
